# AQuA-QE-Playwright

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  WHITEPAPER.md  pyproject.toml
knowledge/projeto_playwright_piloto/: modules_registry.yaml  stories_index.yaml
prompts/: dom_watcher.md  knowledge_agent.md  orchestrator.md  story_analyzer.md  test_generator.md
src/aqua_qe_playwright/: __init__.py  cli.py  config.py  dom_registry.py  prompt_builder.py  story_registry.py  templates.py  validator.py
tests/: test_config.py  test_dom_registry.py  test_prompt_builder.py  test_story_registry.py  test_templates.py  test_validator.py
