[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqua_qe_playwright"
version = "0.1.0"
description = "AQuA-QE Playwright — Artificial Quality Assurance · Quality Engineering"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
aqua-qe-playwright = "aqua_qe_playwright.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
